# TG_mini_app_BACKEND

./: .gitignore  README.md  config_reader.py  main.py  pyproject.toml
api/: __init__.py  common.py  order.py  products.py
bot/: commands.py
bot/handlers/: __init__.py  admin.py  common.py  users.txt
bot/keyboards/: admin.py  builders.py
services/: __init__.py  exel_parser.py  product_list.csv
