[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Slava",email = "aks8slavent@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiogram (>=3.20.0,<4.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.1,<0.35.0)",
    "tortoise-orm (>=0.25.0,<0.26.0)",
    "aerich (>=0.8.2,<0.9.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "tomlkit (>=0.13.2,<0.14.0)",
    "gspread (>=6.2.0,<7.0.0)",
    "oauth2client (>=4.1.3,<5.0.0)",
    "sse-starlette (>=2.2.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
