[tool.poetry]
name = "tg-mini-app-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
asyncpg = "^0.30.0"
aiogram = "^3.20.0.post0"
pydantic-settings = "^2.9.1"
aerich = "^0.8.2"
tomlkit = "^0.13.2"
pandas = "^2.2.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
